--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -242,10 +242,10 @@ post_wordcount:
   separated_meta: true
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
+wechat_subscriber:
+  enabled: true
+  qcode: /assets/images/shadow_qrcode.jpg
+  description: 扫一扫，关注微信公众号。
 
 # Reward
 #reward_comment: Donate comment here
