--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: node_js
 node_js: stable
 
+# 指定缓存模块，可选。缓存可加快编译速度。
+cache:
+  directories:
+    - node_modules
+
+
 # S: Build Lifecycle
 install:
   - npm install
@@ -25,6 +31,8 @@ after_script:
 #branches:
 #  only:
 #    - blogTS
+
+#build以后的地址
 env:
  global:
    - GH_REF: github.com/Shadownc/Shadownc.github.io.git
