--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
 
 #清除 生成
 script:
-  #- hexo clean  
+  - hexo clean  
   - hexo g
 
 after_script:
@@ -23,8 +23,8 @@ after_script:
   - git config user.email "365172043@qq.com"
   - git add .
   - git commit -m "update"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
-  #- git push --force --quiet "https://${GH_TOKEN}@github.com/Shadownc/Shadownc.github.io.git" master:master
+  #- git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@github.com/Shadownc/Shadownc.github.io.git" master:master
 
 
 #默认一个分支可以忽略此配置--监视github仓库中的master分支，分支出现变化就执行build
