--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ after_script:
   - git config user.email "365172043@qq.com"
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@github.com/Shadownc/Shadownc.github.io.git" master:master
 # E: Build LifeCycle
 
 #branches:
