--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ script:
 after_script:
   - cd ./public
   - git init
-  - git config user.name "Shadownc"
-  - git config user.email "365172043@qq.com"
+  - git config user.name "${GIT_NAME}"
+  - git config user.email "${GIT_EMAIL}"
   - git add .
   - git commit -m "update"
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
