--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Use Node.js 13.x
         uses: actions/setup-node@v2
         with:
-          node-version: "13"
+          node-version: "13" # nodejs高于13版本会导致空白页
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
