--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -101,6 +101,7 @@ menu:
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   #commonweal: /404/ || heartbeat
+  links: /links || link
 
 # Enable/Disable menu icons.
 menu_icons:
